--- a/templates/parent.html
+++ b/templates/parent.html
@@ -20,7 +20,7 @@
     {% endblock %}
     -->
     <!--
-    if we want to need parent class aloung with child content we need this type.
+    if we want to need parent html page content aloung with child content we need atleast one empty body_block.
 -->
     <h1>This belongs to parent html page</h1>
     <h1>This belongs to parent html page</h1>
